include ($ENV{CMAKE}/common/prep.cmake)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(ShareWebTProxy)

INSTALL(
    DIRECTORY 
        ../thrift/gen-node
        node_modules
    DESTINATION 
        app/ShareWebTProxy
    FILE_PERMISSIONS 
        OWNER_EXECUTE OWNER_WRITE OWNER_READ 
        GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ 
    DIRECTORY_PERMISSIONS 
        OWNER_EXECUTE OWNER_WRITE OWNER_READ 
        GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ 
    PATTERN "*.svn" EXCLUDE
    PATTERN "*.pyc" EXCLUDE
    PATTERN "*.map" EXCLUDE 
)

INSTALL(
    FILES
        index.js
    DESTINATION
        app/ShareWebTProxy
    PERMISSIONS
        OWNER_EXECUTE OWNER_WRITE OWNER_READ 
        GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ 
)

include(package)